  as first argument to only display the messsage to a given client.
- show colorized players name in players list
- new "sendaway" command as replacement of "kick" command, it is now used for "callvote kick"
- renaming to empty name, to 'all' or to 'allbots' is not allowed
- renaming is now allowed only one time by minute
- New cvars from ioQ3 updates:
  - s_muteWhenUnfocused to mute sound when unfocused (default=0)
  - r_allowResize to allow window resizing in windowed rendering mode (default=0), only with SDL support
- Thanks to ioQ3, passed rcon commands are logged
- callvote string is logged in server log
- new "cancelvote" server side command, can only be used by admins
- support for more crosshair
*** CHANGES ***
- Reloading bug fixed by Joe Kari
- Fix game crash during game load when using cgame binary library
- Fix server not hitting time limit when only bots are playing (thanks to ioQ3 code engine)
- Fix cinematic rendering with wide screens (thanks to ioQ3 code engine), intro is now visible in wide screen mode
- Fix little freeze/lag in dm_train
- Fix invisible "entity 0" bug near movers entities we can trigger
- Many fixes from ioQuake3 sources
- g_allowVote can be set to the number of seconds before a player can call again a vote
- players name can be tagged to make sure they are unique in game
- settings are now stored in a per-user location, instead of in the game's installation directory

Changes in SG 1.0-20081231
******************
*** CHANGES ***
- Updated Unix building process to support more processor kind
- Updated Makefile to produce binary libraries for unix
- Updated Makefile to produce sse, sse2 and smp binaries for unix
- Updated Unix building process to keep install & build folder in the source base
- Fix "OP_BLOCK_COPY not dword aligned" in the same way then an old ioQuake3 fix...


Changes since sg 0.9
******************
*** CHANGES ***
- Added .mak, .bat, .lnt, .vprj, .Conscript, .Makefile files from Tequila archive (Excluded a few)